<resources>
    <string name="app_name">Championpedia</string>
    <string name="championpedia">Championpedia</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="akali">Akali</string>
    <string name="vel_koz">Vel\'Koz</string>
    <string name="admin">Admin</string>
    <string name="karma">Karma</string>
    <string name="aatrox">Aatrox</string>
    <string name="ahri">Ahri</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="account_created">Account Created</string>
    <string name="login_admin_successful">Login Admin Successful</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="comment">Comment</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="coms">Coms</string>
    <string name="del">Del</string>
    <string name="no_comments_yet">There is no comments yet.\n Be the first one to comment!</string>
    <string name="back">Back</string>
    <string name="championimage">championImage</string>
    <string name="lore">Lore</string>
    <string name="see_more">See More</string>
    <string name="_0">0</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="fun">Fun :</string>
    <string name="difficulty">Difficulty :</string>
    <string name="add_review">Add review</string>
    <string name="go_to_comment_section">Go to comment section</string>
    <string name="logged_in_as">"Logged in as:\n"</string>
    <string name="pickrate">Pickrate :</string>
    <string name="fun2">Fun :</string>
    <string name="difficulty2">Difficulty :</string>
    <string name="banrate">Banrate :</string>
    <string name="winrate">Winrate :</string>
</resources>