<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".champion.AddReview">

    <ImageView
        android:id="@+id/champion_image"
        android:layout_width="wrap_content"
        android:layout_height="412dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aatrox" />

    <TextView
        android:id="@+id/champion_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/aatrox"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/champion_image" />

    <TextView
        android:id="@+id/difficulty"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/add_difficulty_button"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/remove_difficulty_button"
        app:layout_constraintTop_toBottomOf="@+id/champion_name" />

    <TextView
        android:id="@+id/fun"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/add_fun_button"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/remove_fun_button"
        app:layout_constraintTop_toBottomOf="@+id/difficulty" />

    <Button
        android:id="@+id/add_difficulty_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="48dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/champion_image" />

    <Button
        android:id="@+id/remove_difficulty_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="60dp"
        android:text="@string/remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/champion_image" />

    <Button
        android:id="@+id/remove_fun_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_difficulty_button" />

    <Button
        android:id="@+id/add_fun_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_difficulty_button" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty"
        app:layout_constraintBottom_toTopOf="@+id/difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fun_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fun"
        app:layout_constraintBottom_toTopOf="@+id/fun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>